--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 <html>
 <head>
     <title>GitHub: jordan-public</title>
-</head>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            margin: 15px;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 15px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style></head>
 <body>
     <h1><a href="https://github.com/jordan-public">GitHub: jordan-public</a></h1>
 
@@ -17,11 +31,143 @@
             <th>Team</th>
         </tr>
         <tr>
+            <td>React Lightning Reservation</td>
+            <td><a href="https://youtu.be/f0T1AIRNWpg">1st Prize</a></td>
+            <td>LatAm Bitcoin Conference 2021 El Salvador</td>
+            <td><a href="https://github.com/react-lightning-reservation/react-lightning-reservation">react-lightning-reservation</a></td>
+            <td>Dad & Daughter:<br/>Jordan Stojanovski,<br/>Andrea Stojanovski</td>
+        </tr>
+        <tr>
+            <td>NFT Lending Auction</td>
+            <td><a href="https://raw.githubusercontent.com/nft-lending/nft-lending-algorand/main/doc/Algorand%20LatAm%202021%20-%20awards.jpeg">1st Prize</a></td>
+            <td>LatAm Algorand Hackathon 2021</td>
+            <td><a href="https://github.com/nft-lending/nft-lending-algorand">nft-lending-algorand</a></td>
+            <td>Dad & Daughter:<br/>Jordan Stojanovski,<br/>Andrea Stojanovski</td>
+        </tr>
+        <tr>
             <td><a href="https://showcase.ethglobal.com/unicode/focus">Focus Protocol</a></td>
             <td><a href="https://showcase.ethglobal.com/unicode/focus">Visor Best Tooling Hack Runner Up</a></td>
             <td><a href="https://unicode.ethglobal.com/">UniCode 2021</a></td>
             <td><a href="https://github.com/jordan-public/focus">focus</a></td>
             <td>solo:<br>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://showcase.ethglobal.com/web3jam/legalnft">Legal NFT</a></td>
+            <td><a href="https://showcase.ethglobal.com/web3jam/legalnft">Best use of IPFS/Filecoin 2nd Place</a></td>
+            <td><a href="https://web3jam.ethglobal.com/">Web3 Jam 2021</a></td>
+            <td><a href="https://github.com/jordan-public/legalnft">legalnft</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://showcase.ethglobal.com/daohacks/frankensteindefidao-sojy5">Frankenstein DeFi DAO - where people and robot members join forces to manage DeFi liquidity</a></td>
+            <td>🏊‍♂️ <a href="https://showcase.ethglobal.com/daohacks/frankensteindefidao-sojy5">IPFS — Pool Prize</a></td>
+            <td><a href="https://dao.ethglobal.com/">DAOHacks 2022</a></td>
+            <td><a href="https://github.com/FrankensteinDeFiDAO/FrenkensteinDeFiDAO">FrenkensteinDeFiDAO</a></td>
+            <td>Jordan Stojanovski,<br/>Albert Garuda,<br/>Raghav Rmadya</td>
+        </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/nft2defi-o4x4e">NFT2DeFi Lending Auctions</a></td>
+            <td></td>
+            <td><a href="https://ethglobal.com/events/nfthack2022">NFTHack 2022</a></td>
+            <td><a href="https://github.com/jordan-public/nft-lending-auction">nft-lending-auction</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/ipdex-interplanetary-decentralized-exchange-498o0">IPDEX - InterPlanetary Decentralized EXchange</a></td>
+            <td>
+                🥇 <a href="https://ethglobal.com/showcase/ipdex-interplanetary-decentralized-exchange-498o0">First Place: IPFS/Filecoin — Best Use</a>
+                <br/>
+                🥇 <a href="https://ethglobal.com/showcase/ipdex-interplanetary-decentralized-exchange-498o0">First Place: Uniswap Grants Program — Most Innovative</a>
+            </td>
+            <td><a href="https://ethglobal.com/events/hackmoney2022">HackMoney 2022</a></td>
+            <td><a href="https://github.com/jordan-public/ip-clob-dex">ip-clob-dex</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/fair-referral-network-cz9m0">Fair Referral Network</a></td>
+            <td>🏊‍♂️ <a href="https://ethglobal.com/showcase/fair-referral-network-cz9m0">Worldcoin — Pool Prize</a></td>
+            <td><a href="https://ethglobal.com/events/ethnewyork2022">ETHNewYork 2022</a></td>
+            <td><a href="https://github.com/jordan-public/fair-referral-network">fair-referral-network</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://devpost.com/software/order-pool-dex">Order Pool Decentralized Exchange</a></td>
+            <td><img src="WINNER.png"> <a href="https://devpost.com/software/order-pool-dex">Chainlink Top Quality Projects - $20,000</a></td>
+            <td><a href="https://chain.link/hackathon">Chainlink Fall 2022 Hackathon</a></td>
+            <td><a href="https://github.com/jordan-public/order-pool-dex">order-pool-dex</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/undercollateralized-storage-deal-auctions-j8xkt">Undercollateralized Storage Deal Auctions</a></td>
+            <td></td>
+            <td><a href="https://ethglobal.com/events/spacewarp">FVM Space Warp 2023</a></td>
+            <td><a href="https://github.com/jordan-public/undercollateralized-storage-deal-auctions">undercollateralized-storage-deal-auctions</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://app.buidlbox.io/projects/dual-rollup-zk-opt">Dual Rollup - Zero Knowledge (ZK) + Optimistic</a></td>
+            <td><a href="https://app.buidlbox.io/projects/dual-rollup-zk-opt">2nd prize </a>from <a href="https://cartesi.io/">Cartesi</a></td>
+            <td><a href="https://app.buidlbox.io/ethdenver/ethdenver-2023">ETHDenver 2023</a></td>
+            <td><a href="https://github.com/jordan-public/dual-rollup-zk-opt">dual-rollup-zk-opt</a></td>
+            <td>Jordan Stojanovski,<br/>Miha Lotrič</td>
+        </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">CFD DEX and Flash Trillions</a></td>
+            <td>
+                💡 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Polygon — Best dApp Deployed on Polygon zkEVM</a>
+                <br/>
+                🔴 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Optimism — Just Deploy!</a>
+                <br/>
+                🥇 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Mantle — Best Use</a>
+                <br/>
+                🥈 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Taiko — Best Dapp</a>
+                <br/>
+                📜 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Scroll — Just Deploy!</a>
+                <br/>
+                🏆 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Scaling Ethereum Finalist</a>
+            </td>
+            <td><a href="https://ethglobal.com/events/scaling2023">Scaling Ethereum 2023</a></td>
+            <td><a href="https://github.com/jordan-public/cfd-dex">cfd-dex</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://devpost.com/software/interactive-ai-news-briefer">Interactive AI News Briefer</a></td>
+            <td></td>
+            <td><a href="https://prompthacks.devpost.com/">PromptHacks 2023</a></td>
+            <td></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Guardian Oracle-Keeper Protocol</a></td>
+            <td>
+                🏊 <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Polygon — Build on Polygon</a>
+                <br/>
+                🛠️ <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Uniswap Foundation — Best Developer Tooling</a>
+                <br/>
+                5️⃣ <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Aave Grants DAO — Built with GHO</a>
+                <br/>
+                🏊 <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Scroll — Deploy a Smart Contract</a>
+                <br/>
+                🥈 <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Neon Foundation - Best Use</a>
+                <br/>
+                🥇 <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Mantle — Best Use</a>
+                <br/>
+                <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">PRZ</a>
+            </td>
+            <td><a href="https://ethglobal.com/events/lisbon">ETHGlobal Lisbon 2023</a></td>
+            <td><a href="https://github.com/jordan-public/guardian-oracle-keeper">guardian-oracle-keeper</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/umaia-optimistic-ai-attestation-3a96d">UMAIA - Optimistic AI Attestation</a></td>
+            <td>
+                8️⃣ <a href="https://ethglobal.com/showcase/umaia-optimistic-ai-attestation-3a96d">FVM — Top 8</a>
+                <br/>
+                🥇 <a href="https://ethglobal.com/showcase/umaia-optimistic-ai-attestation-3a96d">UMA — Best Use</a>
+            </td>
+            <td><a href="https://ethglobal.com/events/waterloo2023">ETHGlobal Waterloo 2023</a></td>
+            <td><a href="https://github.com/jordan-public/optimistic-ai-attestation">optimistic-ai-attestation</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
