--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             text-align: left;
         }
         th {
+            background-color: #a2a2a2;
+        }
+        tr:nth-child(even) {
             background-color: #f2f2f2;
         }
     </style></head>
@@ -76,7 +79,7 @@
             <td><a href="https://ethglobal.com/showcase/ipdex-interplanetary-decentralized-exchange-498o0">IPDEX - InterPlanetary Decentralized EXchange</a></td>
             <td>
                 🥇 <a href="https://ethglobal.com/showcase/ipdex-interplanetary-decentralized-exchange-498o0">First Place: IPFS/Filecoin — Best Use</a>
-                <br/>
+                <br/><br/>
                 🥇 <a href="https://ethglobal.com/showcase/ipdex-interplanetary-decentralized-exchange-498o0">First Place: Uniswap Grants Program — Most Innovative</a>
             </td>
             <td><a href="https://ethglobal.com/events/hackmoney2022">HackMoney 2022</a></td>
@@ -115,15 +118,15 @@
             <td><a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">CFD DEX and Flash Trillions</a></td>
             <td>
                 💡 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Polygon — Best dApp Deployed on Polygon zkEVM</a>
-                <br/>
+                <br/><br/>
                 🔴 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Optimism — Just Deploy!</a>
-                <br/>
+                <br/><br/>
                 🥇 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Mantle — Best Use</a>
-                <br/>
+                <br/><br/>
                 🥈 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Taiko — Best Dapp</a>
-                <br/>
+                <br/><br/>
                 📜 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Scroll — Just Deploy!</a>
-                <br/>
+                <br/><br/>
                 🏆 <a href="https://ethglobal.com/showcase/cfd-dex-and-flash-trillions-ad666">Scaling Ethereum Finalist</a>
             </td>
             <td><a href="https://ethglobal.com/events/scaling2023">Scaling Ethereum 2023</a></td>
@@ -141,17 +144,17 @@
             <td><a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Guardian Oracle-Keeper Protocol</a></td>
             <td>
                 🏊 <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Polygon — Build on Polygon</a>
-                <br/>
+                <br/><br/>
                 🛠️ <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Uniswap Foundation — Best Developer Tooling</a>
-                <br/>
+                <br/><br/>
                 5️⃣ <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Aave Grants DAO — Built with GHO</a>
-                <br/>
+                <br/><br/>
                 🏊 <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Scroll — Deploy a Smart Contract</a>
-                <br/>
+                <br/><br/>
                 🥈 <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Neon Foundation - Best Use</a>
-                <br/>
+                <br/><br/>
                 🥇 <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">Mantle — Best Use</a>
-                <br/>
+                <br/><br/>
                 <a href="https://ethglobal.com/showcase/guardian-oracle-keeper-protocol-rpcws">PRZ</a>
             </td>
             <td><a href="https://ethglobal.com/events/lisbon">ETHGlobal Lisbon 2023</a></td>
@@ -162,7 +165,7 @@
             <td><a href="https://ethglobal.com/showcase/umaia-optimistic-ai-attestation-3a96d">UMAIA - Optimistic AI Attestation</a></td>
             <td>
                 8️⃣ <a href="https://ethglobal.com/showcase/umaia-optimistic-ai-attestation-3a96d">FVM — Top 8</a>
-                <br/>
+                <br/><br/>
                 🥇 <a href="https://ethglobal.com/showcase/umaia-optimistic-ai-attestation-3a96d">UMA — Best Use</a>
             </td>
             <td><a href="https://ethglobal.com/events/waterloo2023">ETHGlobal Waterloo 2023</a></td>
