--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         </tr>
         <tr>
             <td>React Lightning Reservation</td>
-            <td><a href="https://youtu.be/f0T1AIRNWpg">1st Prize</a></td>
+            <td><a href="https://youtu.be/f0T1AIRNWpg">1st Place</a></td>
             <td>LatAm Bitcoin Conference 2021 El Salvador</td>
             <td><a href="https://github.com/react-lightning-reservation/react-lightning-reservation">react-lightning-reservation</a></td>
             <td>Dad & Daughter:<br/>Jordan Stojanovski,<br/>Andrea Stojanovski</td>
         </tr>
         <tr>
             <td>NFT Lending Auction</td>
-            <td><a href="https://raw.githubusercontent.com/nft-lending/nft-lending-algorand/main/doc/Algorand%20LatAm%202021%20-%20awards.jpeg">1st Prize</a></td>
+            <td><a href="https://raw.githubusercontent.com/nft-lending/nft-lending-algorand/main/doc/Algorand%20LatAm%202021%20-%20awards.jpeg">1st Place</a></td>
             <td>LatAm Algorand Hackathon 2021</td>
             <td><a href="https://github.com/nft-lending/nft-lending-algorand">nft-lending-algorand</a></td>
             <td>Dad & Daughter:<br/>Jordan Stojanovski,<br/>Andrea Stojanovski</td>
