--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <title>GitHub: jordan-public</title>
     <style>
+        body {
+            padding-top: 5px;
+            padding-right: 20px;
+            padding-bottom: 20px;
+            padding-left: 20px;
+        }
         table {
             border-collapse: collapse;
             width: 100%;
-            margin: 15px;
         }
         th, td {
             border: 1px solid black;
