Dark  Optimistic Oracle

--- a/index.html
+++ b/index.html
@@ -177,6 +177,19 @@
             <td><a href="https://github.com/jordan-public/optimistic-ai-attestation">optimistic-ai-attestation</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/dark-opt-oracle-d0yg7">Dark Optimistic Oracle</a></td>
+            <td>
+                🥇 <a href="https://ethglobal.com/showcase/dark-opt-oracle-d0yg7">Aleo — Best Use of Leo</a>
+                <br/><br/>
+                🥇 <a href="https://ethglobal.com/showcase/dark-opt-oracle-d0yg7">1inch — Open Track</a>
+                <br/><br/>
+                🏊‍♂️ <a href="https://ethglobal.com/showcase/dark-opt-oracle-d0yg7">UMA — Pool Prize</a>
+            </td>
+            <td><a href="https://ethglobal.com/events/newyork2023">ETHGlobal New York 2023</a></td>
+            <td><a href="https://github.com/jordan-public/optimistic-dark-oracle">optimistic-dark-oracle</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
