Update - billion-zk-voters ETHOnline

--- a/index.html
+++ b/index.html
@@ -190,6 +190,17 @@
             <td><a href="https://github.com/jordan-public/optimistic-dark-oracle">optimistic-dark-oracle</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/billionzkvoters-hw1br">Billion Secret Voters</a></td>
+            <td>
+                🏆 <a href="https://ethglobal.com/showcase/billionzkvoters-hw1br">Aztec — Best Use of Noir</a>
+                <br/><br/>
+                🏊 <a href="https://ethglobal.com/showcase/billionzkvoters-hw1br">Scroll — Pool Prize</a>
+            </td>
+            <td><a href="https://ethglobal.com/events/ethonline2023">ETHGlobal ETHOnline 2023</a></td>
+            <td><a href="https://github.com/jordan-public/billion-zk-voters">billion-zk-voters</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
