Added Sarma - ETHGlobal Istanbul

--- a/index.html
+++ b/index.html
@@ -201,6 +201,34 @@
             <td><a href="https://github.com/jordan-public/billion-zk-voters">billion-zk-voters</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Sarma + EVM = ZKEVM + PE + XC</a></td>
+            <td>
+                🏊 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Filecoin — Pool Prize</a>
+                <br/><br/>
+                🏊 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Arbitrum — Pool Prize</a>
+                <br/><br/>
+                🏊 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Chiliz — Pool Prize</a>
+                <br/><br/>
+                🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Linea — Best dApp on Linea</a>
+                <br/><br/>
+                🔀 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Polygon — Best Cross-chain / LxLy Bridge implementation</a>
+                <br/><br/>
+                🚀 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Scroll — Deploy on Scroll</a>
+                <br/><br/>
+                🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Aleo - Grand Prize</a>
+                <br/><br/>
+                🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Aztec — Best overall Noir application or library</a>
+                <br/><br/>
+                🥇 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Neon EVM — 1st Place Best Neon EVM use case</a>
+                <br/><br/>
+                🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Scaling Ethereum Finalist</a> (presentation <a href="https://youtu.be/RW6qZTEIqWc?t=2609">here</a>) 
+                <br/><br/>
+            </td>
+            <td><a href="https://ethglobal.com/events/istanbul">ETHGlobal Istanbul 2023</a></td>
+            <td><a href="https://github.com/jordan-public/evm-private-execution">evm-private-execution</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
