--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <br/><br/>
                 🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Aztec — Best overall Noir application or library</a>
                 <br/><br/>
-                🥇 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Neon EVM — 1st Place Best Neon EVM use case</a>
+                🥇 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Neon Foundation — 1st Place Best Neon EVM use case</a>
                 <br/><br/>
                 🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Scaling Ethereum Finalist</a> (presentation <a href="https://youtu.be/RW6qZTEIqWc?t=2609">here</a>) 
                 <br/><br/>
