--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <br/><br/>
                 🥇 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Neon Foundation — 1st Place Best Neon EVM use case</a>
                 <br/><br/>
-                🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Scaling Ethereum Finalist</a> (presentation <a href="https://youtu.be/RW6qZTEIqWc?t=2609">here</a>) 
+                🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">ETHGlobal Istanbul Finalist</a> (presentation <a href="https://youtu.be/RW6qZTEIqWc?t=2609">here</a>) 
                 <br/><br/>
             </td>
             <td><a href="https://ethglobal.com/events/istanbul">ETHGlobal Istanbul 2023</a></td>
