Linea changed wording

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <br/><br/>
                 🏊 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Chiliz — Pool Prize</a>
                 <br/><br/>
-                🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Linea — Best dApp on Linea</a>
+                🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Deploy your Dapp on Linea</a>
                 <br/><br/>
                 🔀 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Polygon — Best Cross-chain / LxLy Bridge implementation</a>
                 <br/><br/>
