Prizes as confirmed in email

--- a/index.html
+++ b/index.html
@@ -204,23 +204,23 @@
         <tr>
             <td><a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Sarma + EVM = ZKEVM + PE + XC</a></td>
             <td>
-                🏊 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Filecoin — Pool Prize</a>
-                <br/><br/>
                 🏊 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Arbitrum — Pool Prize</a>
+                <br/><br/>
+                🚀 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Scroll — Deploy on Scroll</a>
                 <br/><br/>
                 🏊 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Chiliz — Pool Prize</a>
                 <br/><br/>
-                🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Deploy your Dapp on Linea</a>
+                🥷 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">MetaMask – Deploy your Dapp on Linea</a>
                 <br/><br/>
-                🔀 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Polygon — Best Cross-chain / LxLy Bridge implementation</a>
-                <br/><br/>
-                🚀 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Scroll — Deploy on Scroll</a>
+                🏊 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">IPFS & Filecoin — Pool Prize</a>
                 <br/><br/>
                 🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Aleo - Grand Prize</a>
                 <br/><br/>
                 🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Aztec — Best overall Noir application or library</a>
                 <br/><br/>
-                🥇 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Neon — 1st Place</a>
+                🔀 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Polygon — Cross-chain / LxLy Bridge implementation</a>
+                <br/><br/>
+                🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Neon EVM — Best Neon EVM use case - 1st Place</a>
                 <br/><br/>
                 🏆 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">ETHGlobal Istanbul 2023 Finalist</a> (presentation <a href="https://youtu.be/RW6qZTEIqWc?t=2609">here</a>) 
                 <br/><br/>
