Encode Solana haclathon 2024

--- a/index.html
+++ b/index.html
@@ -227,6 +227,16 @@
             <td><a href="https://github.com/jordan-public/evm-private-execution">evm-private-execution</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <tr>
+            <td><a href="https://github.com/jordan-public/flash-loan-unlimited-solana">FLUF Protocol:<br/>Flash Loan Unlimited Facility</a></td>
+            <td>
+                🥉 <a href="https://youtu.be/QuHHf63oLN4?t=3480">3rd place</a><br/>
+                    (finalist presentation <a href="https://youtu.be/QuHHf63oLN4?t=765">here</a>)
+            </td>
+            <td><a href="https://www.encode.club/encodesolanahack">Encode Club Solana 2024</a></td>
+            <td><a href="https://github.com/jordan-public/flash-loan-unlimited-solana">flash-loan-unlimited-solana</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
