--- a/index.html
+++ b/index.html
@@ -237,6 +237,21 @@
             <td><a href="https://github.com/jordan-public/flash-loan-unlimited-solana">flash-loan-unlimited-solana</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <tr>
+            <td><a href="https://devfolio.co/projects/zkml-options-liquidator-055b">ZKML Options Liquidator</a></td>
+            <td>
+                <a href="https://ethdenver2024.devfolio.co/projects?prizes=2b10202901254f0b89797dcfdf8903ab">Linea<br/>Build on Linea<br/>First Prize</a>
+                <br/><br/>
+                <a href="https://ethdenver2024.devfolio.co/projects?prizes=acb6a5b38f6643f0921ff516e50bb64d">Arbitrum<br/>Best DeFi Project<br/>First Place</a>
+                <br/><br/>
+                <a href="https://ethdenver2024.devfolio.co/projects?prizes=6baabf87eaa24d73a6ffbbe93a6af671">Hedera<br/>Data-Driven DeFi: Revolutionize Finance with Oracle Feeds<br/>Third Place</a>
+                <br/><br/>
+                <a href="https://ethdenver2024.devfolio.co/projects?prizes=4cdb75c8d2b24ef0bf9fb30d88785912">Brevis<br/>Build Data-driven dApps with Brevis ZK Coprocessor<br/>Third Place</a>
+            </td>
+            <td><a href="https://www.ethdenver.com/buidlathon">ETHDenver Buidlathon 2024</a></td>
+            <td><a href="https://github.com/buidlathon2024/zkml-options-liquidator">zkml-options-liquidator</a></td>
+            <td>Jordan Stojanovski<br/>Ryan MacCarthy</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
