Update Brussels, San Francisco.

--- a/index.html
+++ b/index.html
@@ -261,6 +261,27 @@
             <td><a href="https://github.com/jordan-public/fhe-zk-verifier">fhe-zk-verifier</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/underwriterless-lpad-ajssq">Underwriterless Launchpad</a></td>
+            <td>
+                <a href="https://ethglobal.com/showcase/underwriterless-lpad-ajssq">(none - unfinished but...)</a>
+            </td>
+            <td><a href="https://ethglobal.com/events/brussels">ETHGlobal Brussels 2024</a></td>
+            <td><a href="https://github.com/jordan-public/underwriterless-launchpad">underwriterless-launchpad</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/uneedswap-v5-jn1hx">Uneedswap V5</a></td>
+            <td>
+                🏆 <a href="https://ethglobal.com/showcase/uneedswap-v5-jn1hx">Hedera - EVM Starter Bounty</a><br/><br/>
+                🥈 <a href="https://ethglobal.com/showcase/uneedswap-v5-jn1hx">Uniswap Foundation - Unichain 2nd place</a><br/><br/>
+                🥈 <a href="https://ethglobal.com/showcase/uneedswap-v5-jn1hx">Polygon - Best zk App on Polygon 2nd place</a><br/><br/>
+                <a href="https://ethglobal.com/showcase/uneedswap-v5-jn1hx">SKALE Network - Best Use of Zero Gas Fees 4th place</a>
+            </td>
+            <td><a href="https://ethglobal.com/events/sanfrancisco2024">ETHGlobal San Francisco 2024</a></td>
+            <td><a href="https://github.com/jordan-public/multiprotocol-lp">multiprotocol-lp</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
