--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <tr>
             <td><a href="https://ethglobal.com/showcase/underwriterless-lpad-ajssq">Underwriterless Launchpad</a></td>
             <td>
-                <a href="https://ethglobal.com/showcase/underwriterless-lpad-ajssq">(none - unfinished but...)</a>
+                <a href="https://ethglobal.com/showcase/underwriterless-lpad-ajssq">none - unfinished.</a> But see <a href="https://github.com/jordan-public/multiprotocol-lp/blob/main/README.md">this.</a>
             </td>
             <td><a href="https://ethglobal.com/events/brussels">ETHGlobal Brussels 2024</a></td>
             <td><a href="https://github.com/jordan-public/underwriterless-launchpad">underwriterless-launchpad</a></td>
