--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 🏆 <a href="https://ethglobal.com/showcase/uneedswap-v5-jn1hx">Zircuit - Best Zircuit Integration</a><br/><br/>
                 🥈 <a href="https://ethglobal.com/showcase/uneedswap-v5-jn1hx">Uniswap Foundation - Unichain 2nd place</a><br/><br/>
                 🥈 <a href="https://ethglobal.com/showcase/uneedswap-v5-jn1hx">Polygon - Best zk App on Polygon 2nd place</a><br/><br/>
-                <a href="https://ethglobal.com/showcase/uneedswap-v5-jn1hx">SKALE Network - Best Use of Zero Gas Fees 4th place</a>
+                4️⃣ <a href="https://ethglobal.com/showcase/uneedswap-v5-jn1hx">SKALE Network - Best Use of Zero Gas Fees 4th place</a>
             </td>
             <td><a href="https://ethglobal.com/events/sanfrancisco2024">ETHGlobal San Francisco 2024</a></td>
             <td><a href="https://github.com/jordan-public/multiprotocol-lp">multiprotocol-lp</a></td>
