--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
             <td>Dad & Daughter:<br/>Jordan Stojanovski,<br/>Andrea Stojanovski</td>
         </tr>
         <tr>
-            <td><a href="https://showcase.ethglobal.com/unicode/focus">Focus Protocol</a></td>
-            <td><a href="https://showcase.ethglobal.com/unicode/focus">Visor Best Tooling Hack Runner Up</a></td>
-            <td><a href="https://unicode.ethglobal.com/">UniCode 2021</a></td>
+            <td><a href="https://ethglobal.com/showcase/focus-vg9ju">Focus Protocol</a></td>
+            <td><a href="https://ethglobal.com/showcase/focus-vg9ju">Visor Best Tooling Hack Runner Up</a></td>
+            <td><a href="https://ethglobal.com/events/unicode">UniCode 2021</a></td>
             <td><a href="https://github.com/jordan-public/focus">focus</a></td>
             <td>solo:<br>Jordan Stojanovski</td>
         </tr>
         <tr>
-            <td><a href="https://showcase.ethglobal.com/web3jam/legalnft">Legal NFT</a></td>
-            <td><a href="https://showcase.ethglobal.com/web3jam/legalnft">Best use of IPFS/Filecoin 2nd Place</a></td>
-            <td><a href="https://web3jam.ethglobal.com/">Web3 Jam 2021</a></td>
+            <td><a href="https://ethglobal.com/showcase/legalnft-5rwut">Legal NFT</a></td>
+            <td><a href="https://ethglobal.com/showcase/legalnft-5rwut">Best use of IPFS/Filecoin 2nd Place</a></td>
+            <td><a href="https://ethglobal.com/events/web3jam">Web3 Jam 2021</a></td>
             <td><a href="https://github.com/jordan-public/legalnft">legalnft</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
         <tr>
-            <td><a href="https://showcase.ethglobal.com/daohacks/frankensteindefidao-sojy5">Frankenstein DeFi DAO - where people and robot members join forces to manage DeFi liquidity</a></td>
-            <td>🏊‍♂️ <a href="https://showcase.ethglobal.com/daohacks/frankensteindefidao-sojy5">IPFS — Pool Prize</a></td>
-            <td><a href="https://dao.ethglobal.com/">DAOHacks 2022</a></td>
+            <td><a href="https://ethglobal.com/showcase/frankensteindefidao-sojy5">Frankenstein DeFi DAO - where people and robot members join forces to manage DeFi liquidity</a></td>
+            <td>🏊‍♂️ <a href="https://ethglobal.com/showcase/frankensteindefidao-sojy5">IPFS — Pool Prize</a></td>
+            <td><a href="https://ethglobal.com/events/daohacks">DAOHacks 2022</a></td>
             <td><a href="https://github.com/FrankensteinDeFiDAO/FrenkensteinDeFiDAO">FrenkensteinDeFiDAO</a></td>
             <td>Jordan Stojanovski,<br/>Albert Garuda,<br/>Raghav Rmadya</td>
         </tr>
