Bangkok Devcon hackathons

--- a/index.html
+++ b/index.html
@@ -282,6 +282,25 @@
             <td><a href="https://github.com/jordan-public/multiprotocol-lp">multiprotocol-lp</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <tr>
+            <td><a href="https://github.com/jordan-public/bitvestor-launchpad">Bitvestment:<br/>Single Sided Liquidity Launchpad AMM for Token Investment using Bitcoin</a></td>
+            <td></td>
+            <td>Encode Club Bangkok Bitcoin Hackathon 2024</td>
+            <td><a href="https://github.com/jordan-public/bitvestor-launchpad">bitvestor-launchpad</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/petroeth-option-dex-vo05p">PetroETH Option DEX</a></td>
+            <td>
+                🥇 <a href="https://ethglobal.com/showcase/petroeth-option-dex-vo05p">Rome Protocol - Best Use of Rome Protocol 1st place</a><br/><br/>
+                🏆 <a href="https://ethglobal.com/showcase/petroeth-option-dex-vo05p">Nethermind - Build an Opinionated DEX</a><br/><br/>
+                🥈 <a href="https://ethglobal.com/showcase/petroeth-option-dex-vo05p">Uniswap Foundation - Unichain 2nd place</a><br/><br/>
+                🏆 <a href="https://ethglobal.com/showcase/petroeth-option-dex-vo05p">Linea - Best Project Deployed on Linea and MetaMask JSON-RPC API</a>
+            </td>
+            <td><a href="https://ethglobal.com/events/bangkok">ETHGlobal Bangkok 2024</a></td>
+            <td><a href="https://github.com/jordan-public/gas-opt-dex">gas-opt-dex</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
