Most awarded link.

--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
         <tr>
             <td><a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Sarma + EVM = ZKEVM + PE + XC</a></td>
             <td>
+                🏆 <b>Most awarded project in the history of ETHGlobal - see <a href="https://x.com/zkether/status/1875377941221404910?s=67&t=vtDcKv0cIYkWxPHsb4Wp8w">here</a>.</b>
+                <br/><br/>
                 🏊 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Arbitrum — Pool Prize</a>
                 <br/><br/>
                 🚀 <a href="https://ethglobal.com/showcase/sarma-evm-zkevm-pexc-9wp7o">Scroll — Deploy on Scroll</a>
