--- a/index.html
+++ b/index.html
@@ -310,6 +310,18 @@
             <td><a href="https://github.com/jordan-public/decentralized-actuator">decentralized-actuator</a></td>
             <td>Dad & Daughter:<br/>Jordan Stojanovski,<br/>Andrea Stojanovski</td>
         </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/truzt-arkanum-0vnxw">truZt arKanum</a></td>
+            <td>
+                🏆 <a href="https://ethglobal.com/showcase/truzt-arkanum-0vnxw">Aleo - Best private dApp on Aleo 1st place</a>
+                <br/><br/>
+                🏆 <a href="https://ethglobal.com/showcase/truzt-arkanum-0vnxw">ETHGlobal Trifecta Finalist</a> (presentation <a href="https://youtu.be/2YkFVHN-nEM?list=LL&t=6285">here</a>) 
+                <br/><br/>
+            </td>
+            <td><a href="https://ethglobal.com/events/trifecta">ETHGlobal Trifecta</a></td>
+            <td><a href="https://github.com/jordan-public/truzt-arkanum">truzt-arkanum</a></td>
+            <td>Dad & Daughter:<br/>Jordan Stojanovski,<br/>Andrea Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
