--- a/index.html
+++ b/index.html
@@ -322,6 +322,16 @@
             <td><a href="https://github.com/jordan-public/truzt-arkanum">truzt-arkanum</a></td>
             <td>Dad & Daughter:<br/>Jordan Stojanovski,<br/>Andrea Stojanovski</td>
         </tr>
+        <tr>
+        <td><a href="https://ethglobal.com/showcase/watchtower-d2c1o">Watchtower</a></td>
+            <td>
+                🥇 <a href="https://ethglobal.com/showcase/watchtower-d2c1o">Uniswap Foundation - Uniswap v4 Hook Integrations 1st place</a><br/><br/>
+                🥈 <a href="https://ethglobal.com/showcase/watchtower-d2c1o">Nodit - Best Multi-chain App with Nodit's Web3 Data API 2nd place</a><br/><br/>
+            </td>
+            <td><a href="https://ethglobal.com/events/taipei">ETHGlobal Taipei 2025</a></td>
+            <td><a href="https://github.com/jordan-public/watchtower-1timehooks4sale">watchtower-1timehooks4sale</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
