--- a/index.html
+++ b/index.html
@@ -332,6 +332,24 @@
             <td><a href="https://github.com/jordan-public/watchtower-1timehooks4sale">watchtower-1timehooks4sale</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <tr>
+        <td>Aptos Central Limit Order-Hook Book</td>
+            <td>
+            </td>
+            <td></td>
+            <td><a href="https://github.com/jordan-public/order-hook-book-aptos">order-hook-book-aptos</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
+        <tr>
+        <td><a href="https://ethglobal.com/showcase/acrozz-optzkbridge-tgpfi">Acrozz: OptZKBridge</a></td>
+            <td>
+                🏆 <a href="https://ethglobal.com/showcase/acrozz-optzkbridge-tgpfi">vlayer - Best use of Time Travel OR Teleport</a><br/><br/>
+                🏆 <a href="https://ethglobal.com/showcase/acrozz-optzkbridge-tgpfi">Rootstock - Freestyle Track 1st place</a><br/><br/>
+            </td>
+            <td><a href="https://ethglobal.com/events/prague">ETHGlobal Prague 2025</a></td>
+            <td><a href="https://github.com/jordan-public/optimistic-zk-bridge">optimistic-zk-bridge</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
