--- a/index.html
+++ b/index.html
@@ -350,6 +350,14 @@
             <td><a href="https://github.com/jordan-public/optimistic-zk-bridge">optimistic-zk-bridge</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <td><a href="https://devfolio.co/projects/pessimistic-zk-fair-liquidations-fef4">Pessimistic ZK Fair Liquidations</a></td>
+            <td>
+                🥇 <a href="https://devfolio.co/projects/pessimistic-zk-fair-liquidations-fef4">Best privacy-preserving Defi app on Aleo</a><br/><br/>
+            </td>
+            <td><a href="https://zk-hack-berlin.devfolio.co">ZK Hack Berlin 2025</a> (<a href="https://zkhack.dev">ZK Hack</a>)</td>
+            <td><a href="https://github.com/jordan-public/pessimistic-zk-fair-liquidation">pessimistic-zk-fair-liquidation</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
