--- a/index.html
+++ b/index.html
@@ -358,6 +358,14 @@
             <td><a href="https://github.com/jordan-public/pessimistic-zk-fair-liquidation">pessimistic-zk-fair-liquidation</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <td><a href="https://ethglobal.com/showcase/zircuit-prolog-preex-wuwjk">Zircuit Prolog Pre-execution</a></td>
+            <td>
+                🥇 <a href="https://ethglobal.com/showcase/zircuit-prolog-preex-wuwjk">Zircuit - Best App Idea</a><br/><br/>
+            </td>
+            <td><a href="https://ethglobal.com/events/cannes">ETHGlobal Cannes 2025</a></td>
+            <td><a href="https://github.com/jordan-public/zircuit-prolog-preexectution">zircuit-prolog-preexectution</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
