ETHGlobal New York 2025

--- a/index.html
+++ b/index.html
@@ -366,6 +366,18 @@
             <td><a href="https://github.com/jordan-public/zircuit-prolog-preexectution">zircuit-prolog-preexectution</a></td>
             <td>solo:<br/>Jordan Stojanovski</td>
         </tr>
+        <tr>
+            <td><a href="https://ethglobal.com/showcase/tx-delay-insurance-5fhae">TX Delay Insurance</a></td>
+            <td>
+                🏊‍♂️ <a href="https://ethglobal.com/showcase/tx-delay-insurance-5fhae">Flow - Flow Builder Pool Prize</a>
+                <br/><br/>
+                🏆 <a href="https://ethglobal.com/showcase/tx-delay-insurance-5fhae">ETHGlobal New York 2025 Finalist</a> (presentation <a href="https://youtu.be/Q18pnAODgqQ?t=7999">here</a>) 
+                <br/><br/>
+            </td>
+            <td><a href="https://ethglobal.com/events/newyork2025">ETHGlobal New York 2025</a></td>
+            <td><a href="https://github.com/jordan-public/transaction-delay-insurance">transaction-delay-insurance</a></td>
+            <td>solo:<br/>Jordan Stojanovski</td>
+        </tr>
         <!-- Continue with the rest of the rows following this format. -->
     </table>
 </body>
